# filest

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test_auth_expiry.html  test_ui_consistency.html
src/: auth.rs  handlers.rs  main.rs  models.rs  ws_upload.rs
static/: index.html
