[package]
name = "filest"
version = "1.0.1"
edition = "2024"
authors = ["File Manager"]
description = "A remote file manager server with web UI"
[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Authentication
base64 = "0.21"
# File operations
tokio-util = { version = "0.7", features = ["io"] }
async-walkdir = "1"
futures = "0.3"
# Utilities
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
bytes = "1"
# For disk info (cross-platform)
sysinfo = "0.30"